--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,31 +1,23 @@
-# Stage 1: Compute a recipe file for dependencies
-FROM rust:1.81-slim-bullseye AS planner
-WORKDIR /app
-RUN cargo install cargo-chef
-COPY . .
-RUN cargo chef prepare --recipe-path recipe.json
-
-# Stage 2: Cache and build dependencies
-FROM rust:1.81-slim-bullseye AS cacher
-WORKDIR /app
-RUN cargo install cargo-chef
-COPY --from=planner /app/recipe.json recipe.json
-# Build dependencies - this is the caching layer!
-RUN cargo chef cook --release --bin backend --recipe-path recipe.json
-
-# Stage 3: Build the application
+# Simple Dockerfile for Railway deployment
 FROM rust:1.81-slim-bullseye AS builder
+
 WORKDIR /app
+
+# Install build dependencies
+RUN apt-get update && apt-get install -y pkg-config libssl-dev && rm -rf /var/lib/apt/lists/*
+
+# Copy source code
 COPY . .
-# Copy over the cached dependencies
-COPY --from=cacher /app/target target
-COPY --from=cacher /usr/local/cargo /usr/local/cargo
+
+# Build the application (offline mode for SQLx)
+ENV SQLX_OFFLINE=true
 RUN cargo build --release --bin backend
 
-# Stage 4: Runtime environment
+# Runtime stage
 FROM debian:bullseye-slim AS runtime
 WORKDIR /app
-# Install system dependencies
+
+# Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     openssl \
     ca-certificates \
@@ -34,7 +26,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY --from=builder /app/target/release/backend /usr/local/bin/backend
 COPY --from=builder /app/migrations ./migrations
 
-# Expose the API port
 EXPOSE 3000
 
 CMD ["/usr/local/bin/backend"]
